# q-translate

./: .gitignore  Cargo.toml  README.md
assets/: pl.json
assets/i18n/: de.json  pl.json
src/: lib.rs  main.rs  translate.rs  utils.rs
src/lib/: translate.rs
