[package]
name = "q-translate"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = {version = "1.0.149", features = ["preserve_order"]}
reqwest = { version = "0.13.1", features = ["query", "json"] }
tokio = { version = "1.49.0", features = ["full"] }
dotenv = "0.15.0"
clap = { version = "4.5.58", features = ["derive"] }
futures = "0.3.32"
itertools = "0.14.0"
log = "0.4.29"